test/cmdlineTests/too_long_line_edge_out.sol.err

Warning: Source file does not specify required compiler version!

 --> too_long_line_edge_out.sol:1:1: Source file does not specify required compiler version!
  |
0 | contract C {
  | ^ (Relevant source part starts here and spans across multiple lines).

Error: Identifier not found or not unique.
 --> too_long_line_edge_out.sol:2:37: Identifier not found or not unique.
  |
1 |  ...   function fffffffffffffffffffffff(announcementTypeTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT Typ, string A) onlyOwner external  ...
  |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
